--- a/AddressExport.html
+++ b/AddressExport.html
@@ -2,11 +2,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sidewalk Damage</title>
+		<title>Address Export</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
 		
+		<link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.14/themes/css/cartodb.css" />
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" />
+		<link rel="stylesheet" href="lib/leaflet.draw.css" />
 		<!-- CSS Styling -->
 		<style type="text/css">
 			html, body, #map {
@@ -53,12 +57,19 @@
 			.modal-backdrop, .modal-backdrop.fade.in{
 				opacity:0;
 			}
+			.tooltip.bottom .tooltip-arrow{
+				border-bottom-color: #2E6DA4;
+			}
+			.tooltip.bottom .tooltip-inner {
+				background-color: #2E6DA4;
+				color:white;
+			}
 		</style>
 	</head>
 	<!-- Navigation Bar -->
 	<nav class="navbar navbar-default" style="margin:0; border:0; padding-right:15px; background-color:#FFFFFF">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">Address Export</a>
+			<a class="navbar-brand" href="#">Oakland Parcels</a>
 		</div>
 		<div>
 			<ul class="nav navbar-nav">
@@ -71,10 +82,10 @@
 				<form class="navbar-form pull-right">
 					<a type="button" class="btn btn-primary" id="Export">Export CSV</a>
 					<button type="button" class="btn btn-primary" id="layerModal">
-						<span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-th-list" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Layers"></span>
 					</button>
-					<button type="button" class="btn btn-primary" data-toggle="popover" data-placement="bottom" title="Help" data-html="true">
-						<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+					<button type="button" class="btn btn-primary" data-toggle="popover" data-placement="bottom" data-html="true">
+						<span class="glyphicon glyphicon-question-sign" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Help"></span>
 					</button>
 					<div id="myModal" class="modal fade" role="dialog">
 						<div class="modal-dialog modal-sm">
@@ -107,22 +118,19 @@
 	<!--include scripts-->
 	<!--Jquery needs to be before bootstrap-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.14/themes/css/cartodb.css" />
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" />
 	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.14/cartodb.js"></script>
-    <link rel="stylesheet" href="lib/leaflet.draw.css" />
 	<script src="lib/leaflet.draw.js"></script>
 	
     <!-- Drop your code between the script tags below! -->
     <script>
 	$(document).ready(function(){
 		$('[data-toggle="popover"]').popover({
-			content: "Click the Polygon <img src='lib/images/polygon.jpg' style='height:18px'>to the left to start drawing<br>Double click to finish drawing<br><br>Use the edit <span class='glyphicon glyphicon-edit' aria-hidden='true'></span> or delete <span class='glyphicon glyphicon-trash' aria-hidden='true'></span> button to modify your polygon<br><br>Click the Export CSV button once satisified with polygon"
-		}); 
+			content: "Click the Polygon <img src='lib/images/polygon.jpg' style='height:18px'>to the left to start drawing<br>Double click to finish drawing<br><br>Use the edit <span class='glyphicon glyphicon-edit' aria-hidden='true'></span> or delete <span class='glyphicon glyphicon-trash' aria-hidden='true'></span> button to modify your polygon<br><br>Click the Export CSV button once satisified with polygon<br>You can open the CSV using Microsoft Excel"
+		});
+		$('[data-toggle="tooltip"]').tooltip();
 	});
 	window.onload = function() {
 		var user = 'oakland-admin';
@@ -139,14 +147,14 @@
 		}
 		// Instantiate map on specified DOM element
 		var map_object = new L.Map(map, options);
-		
+	
 		// Add a basemap to the map object just created
 		L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
 			maxZoom:22,
 			maxNativeZoom:18 //zoom level to scale additional zoom layers
 			}).addTo(map_object);
-        
+		
 		var sublayers = [];
 		cartodb.createLayer(map_object, layerSource[0].vizjson)
 			.addTo(map_object)
@@ -161,7 +169,7 @@
 		initSearchBox();
 		initDrawTool();
 		
-		<!-- Start Drawing Tool -->
+		<!--Start Drawing Tool-->
 		function initDrawTool(){
 			var drawnItems = L.featureGroup().addTo(map_object);
 			var drawControlFull = new L.Control.Draw({
@@ -275,14 +283,18 @@
 				}
 				else{
 					var tableSQL = layerSource[0].tableName[0];
-					var fieldSQL = tableSQL + ".apn_sort," + tableSQL + ".situs_ho_1," + tableSQL + ".situs_stre," + tableSQL + ".situs_city," + tableSQL + ".situs_zip_";
+					var fieldSQL = 
+						tableSQL + ".apn_sort," + tableSQL + ".situs_ho_1," + tableSQL + ".situs_unit," + tableSQL + ".situs_stre," + 
+						tableSQL + ".situs_city," + tableSQL + ".situs_zip_," + tableSQL + ".owner_name," + tableSQL + ".mailing__1," + 
+						tableSQL + ".mailing__2," + tableSQL + ".mailing__3," + tableSQL + ".mailing__4," + 
+						tableSQL + ".mailing__5," + tableSQL + ".mailing__6," + tableSQL + ".mailing_ad";
 					var new_sql = "http://oakland-admin.cartodb.com/api/v2/sql?q=select%20" + fieldSQL + "%20from%20" + tableSQL + "%20WHERE%20ST_Intersects(" + tableSQL + ".the_geom,ST_GeomFromText(" + polySQL + "))&format=csv";
 					console.log(new_sql);
 					$(this).attr("href", new_sql);
 				}
 			});
 		}
-		<!-- End Drawing Tool -->
+		<!--End Drawing Tool-->
 		//initialize buttons and code to handle cases
 		$('#layerModal').click(function(){
 			$('#myModal').modal();
@@ -297,8 +309,6 @@
 			}
 		});
 		
-		<!-- Functions -->
-		//not fully optimized
 		<!--Geocoder Start-->
 		function initSearchBox(){
 			var bounds = map_object.getBounds();
